feat: upload files, delete ads on adoption
